Migration to serve for production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - mongo
     networks:
       - internal
-    command: "yarn start"
+    command: "yarn prod"
     environment:
       REACT_APP_FLOWER_MONGO: mongo
       REACT_APP_FLAG_REGEX: "FLG[0-9a-f]{29}"
