--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "react-time-range-picker": "^1.4.0",
     "react-tiny-virtual-list": "^2.1.4",
     "react-virtual-list": "^2.3.0",
-    "react-virtualized": "^9.19.1"
+    "react-virtualized": "^9.19.1",
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prod": "serve -s -p 3000 build"
   },
   "devDependencies": {
     "@types/react": "^16.9.49",
